# MagnifyShit-cpp

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  MaginfyShit.sln  README.md
.github/workflows/: build.yml
MaginfyShit/: MaginfyShit.cpp  MaginfyShit.rc  MaginfyShit.vcxproj  MaginfyShit.vcxproj.filters  Resource.h
MagnifyShit/: MagnifyShit.cpp  MagnifyShit.rc  MagnifyShit.vcxproj  MagnifyShit.vcxproj.filters  Resource.h  framework.h  globals.cpp  settings.ini
legacy/: MagnifyShit.sln
legacy/MagnifyShit/: MagnifyShit.h  MagnifyShit.rc  Resource.h  framework.h
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  Application.hpp  Config.cpp  Config.hpp  Hotkeys.cpp  Hotkeys.hpp  MagnifyShit.rc
src/capture/windows/: DxgiDuplication.cpp  DxgiDuplication.hpp
src/platform/windows/: WinPlatform.cpp  WinPlatform.hpp  WinWindow.cpp  WinWindow.hpp
src/render/d3d11/: D3D11Renderer.cpp  D3D11Renderer.hpp  Shaders.hpp
src/tools/: Eyedropper.cpp  Eyedropper.hpp  Screenshot.cpp  Screenshot.hpp
src/ui/: ImGuiBackend.cpp  ImGuiBackend.hpp  MainOverlay.cpp  MainOverlay.hpp  SettingsWindow.cpp  SettingsWindow.hpp  Theme.cpp  Theme.hpp  UiContext.hpp
src/util/: ComPtr.hpp  Geometry.hpp  Log.cpp  Log.hpp  Result.hpp  ScopeGuard.hpp
tests/: CMakeLists.txt  test_geometry.cpp  test_result.cpp
